--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 <br><br><br><br><br><br><br><br>
 <hr>
 <h6>This page is managed by S.KKANNAN</h6> 
+<h6>for copyrights</h6>
 </body>
 </html>
   
