--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 </head>
 <body style="background-color: white;">
     <h1><ul>
-        <li> <a href="#home">Home</a></li>
+        <li> <a href="index.html">Home</a></li>
         <li> <a href="Personal.html">Personal</a></li>
         <li> <a href="contact.html">Contact</a></li>
         <li> <a href="project.html">Project</a></li>
