--- a/Personal.html
+++ b/Personal.html
@@ -17,7 +17,7 @@
 <body>
     <h1 id="Name">Personal</h1>
     <h1><ul>
-        <li> <a href="#home">Home</a></li>
+        <li> <a href="index.html">Home</a></li>
         <li> <a href="Personal.html">Personal</a></li>
         <li> <a href="contact.html">Contact</a></li>
         <li> <a href="project.html">Project</a></li>
