--- a/project.html
+++ b/project.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1><ul>
-        <li> <a href="#home">Home</a></li>
+        <li> <a href="index.html">Home</a></li>
         <li> <a href="Personal.html">Personal</a></li>
         <li> <a href="contact.html">Contact</a></li>
         <li> <a href="project.html">Project</a></li>
