--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <title>Contact</title>
 </head>
 <body>
-    <h1><ul>
+    <h1><ul class="home">
         <li> <a href="index.html">Home</a></li>
         <li> <a href="Personal.html">Personal</a></li>
         <li> <a href="contact.html">Contact</a></li>
