--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             display: block;
             color: white;
             padding: 25px;
-            text-decoration: none;
+            text-decoration: none; 
         }
         li a:hover{
             background-color: black;
@@ -33,7 +33,7 @@
     </style>
 </head>
 <body style="background-color: white;">
-    <h1><ul>
+    <h1><ul class="home">
         <li> <a href="index.html">Home</a></li>
         <li> <a href="Personal.html">Personal</a></li>
         <li> <a href="contact.html">Contact</a></li>
@@ -48,7 +48,7 @@
 <br><br><br><br><br><br><br><br>
 <hr>
 <h6>This page is managed by S.KKANNAN</h6> 
-<h6>for copyrights</h6>
+
 </body>
 </html>
   
