--- a/Personal.html
+++ b/Personal.html
@@ -12,11 +12,28 @@
     .tab{
         width: auto;
     }
+    ul{
+        list-style-type: none;
+        overflow: hidden;
+        background-color:rgb(44, 40, 40);
+    }
+    li a{
+            float: left;
+            text-align: center;
+            display: block;
+            color: white;
+            padding: 25px;
+            text-decoration: none;
+        
+        }
+        li a:hover{
+            background-color: black;
+        }
     </style>
 </head>
 <body>
-    <h1 id="Name">Personal</h1>
-    <h1><ul>
+    
+    <h1><ul class="home">
         <li> <a href="index.html">Home</a></li>
         <li> <a href="Personal.html">Personal</a></li>
         <li> <a href="contact.html">Contact</a></li>
