--- a/Personal.html
+++ b/Personal.html
@@ -29,6 +29,9 @@
         li a:hover{
             background-color: black;
         }
+        body{
+            background-color: white;
+        }
     </style>
 </head>
 <body>
