--- a/Personal.html
+++ b/Personal.html
@@ -6,7 +6,7 @@
     <title>About Me</title>
     
 </head>
-<body>
+<body style="background-color: white;">
     <h1><ul class="home">
         <li> <a href="index.html">Home</a></li>
         <li> <a href="Personal.html">Personal</a></li>
