--- a/Personal.html
+++ b/Personal.html
@@ -34,7 +34,7 @@
             </tr>
             <tr>
                 <th><abbr title="B.E">Bachelor of Engineering</abbr> </th>
-                <th><abbr title="JCE">Jerusalem college of Engineering</abbr></th>
+                <th><abbr title="JCE" style="text-decoration: none;">Jerusalem college of Engineering</abbr></th>
                 <th>8.4/10</th>
                 <th>84%</th>
                 <th>2024</th>
