--- a/Personal.html
+++ b/Personal.html
@@ -4,6 +4,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>About Me</title>
+    <style>
+        abbr{
+            border: none;
+            text-decoration: none;
+        }
+    </style>
     
 </head>
 <body style="background-color: white;">
@@ -34,7 +40,7 @@
             </tr>
             <tr>
                 <th><abbr title="B.E">Bachelor of Engineering</abbr> </th>
-                <th><abbr title="JCE" style="text-decoration: none;">Jerusalem college of Engineering</abbr></th>
+                <th><abbr title="JCE">Jerusalem college of Engineering</abbr></th>
                 <th>8.4/10</th>
                 <th>84%</th>
                 <th>2024</th>
