--- a/project.html
+++ b/project.html
@@ -4,6 +4,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+        h2{
+            text-align: justify;
+            text-decoration:none;
+            color: lightskyblue;
+        }
+    </style>
 </head>
 <body>
     <h1><ul>
@@ -15,7 +22,14 @@
     </ul></h1>
    
     <h1>1.Wireless charging using Electromagnetic inductiom</h1>
-    <h2>This project explores a wireless charging system based on electromagnetic induction for efficient power transfer. Comprising a transmitter and receiver unit, the system utilizes coils to establish mutual electromagnetic coupling. The transmitter generates an alternating current, creating a magnetic field, while the receiver captures and converts this energy into electricity. The project focuses on optimizing coil configurations, addressing power losses, and integrating smart technologies for enhanced safety and control. The system's applications span electric vehicles and portable electronics, contributing to the advancement of wireless charging technologies for a more accessible and sustainable power future.</h2>
+    <h2 style="text-align: justify;">This project explores a wireless charging system based on electromagnetic induction for efficient power transfer.
+         Comprising a transmitter and receiver unit, the system utilizes coils to establish mutual electromagnetic coupling. 
+         The transmitter generates an alternating current, creating a magnetic field, while the receiver captures and converts 
+         this energy into electricity. 
+         The project focuses on optimizing coil configurations, addressing power losses, and integrating smart technologies for enhanced
+          safety and control. 
+         The system's applications span electric vehicles and portable electronics, contributing to the advancement of wireless charging 
+         technologies for a more accessible and sustainable power future.</h2>
     <h1>2.RFID Attendance using IoT</h1>
     <h1>3.UHF RFID Attendance Monitoring system</h1>
 </body>
