--- a/project.html
+++ b/project.html
@@ -5,10 +5,10 @@
     <title>Projects</title>
     <link rel="stylesheet" href="style.css">
     <style>
-        h2{
+        p{
             text-align: justify;
             text-decoration:none;
-            color: lightskyblue;
+            color: darkblue;
         }
     </style>
 </head>
@@ -21,16 +21,19 @@
         <li style="text-align: right;"><a href="https://www.linkedin.com/in/kkannan-s-1631491b5/", target="_blank", title="Linkedin">LinkedIn</a></li>
     </ul></h1>
    
-    <h1>1.Wireless charging using Electromagnetic inductiom</h1>
-    <h2 style="text-align: justify;">This project explores a wireless charging system based on electromagnetic induction for efficient power transfer.
-         Comprising a transmitter and receiver unit, the system utilizes coils to establish mutual electromagnetic coupling. 
-         The transmitter generates an alternating current, creating a magnetic field, while the receiver captures and converts 
-         this energy into electricity. 
-         The project focuses on optimizing coil configurations, addressing power losses, and integrating smart technologies for enhanced
-          safety and control. 
-         The system's applications span electric vehicles and portable electronics, contributing to the advancement of wireless charging 
-         technologies for a more accessible and sustainable power future.</h2>
+    <h1>1.Wireless charging using Electromagnetic induction</h1>
+    <p>This project explores a wireless charging system based on electromagnetic induction for efficient power transfer.
+        Comprising a transmitter and receiver unit, the system utilizes coils to establish mutual electromagnetic coupling. 
+        The transmitter generates an alternating current, creating a magnetic field, while the receiver captures and converts 
+        this energy into electricity. 
+        The project focuses on optimizing coil configurations, addressing power losses, and integrating smart technologies for enhanced
+         safety and control. 
+        The system's applications span electric vehicles and portable electronics, contributing to the advancement of wireless charging 
+        technologies for a more accessible and sustainable power future.</p>
     <h1>2.RFID Attendance using IoT</h1>
+    <p>The RFID Attendance System employs RFID tags/cards, RFID readers, and NodeMCU connected to the cloud. Participants use RFID cards, 
+        and NodeMCU captures and transmits data to a cloud database. Real-time attendance records are accessible via a user-friendly web interface, offering scalability, cost-effectiveness, and secure data transmission. 
+        The system streamlines attendance tracking for educational and organizational settings, ensuring efficiency and accuracy.</p>
     <h1>3.UHF RFID Attendance Monitoring system</h1>
 </body>
 </html>
