--- a/project.html
+++ b/project.html
@@ -32,8 +32,14 @@
         technologies for a more accessible and sustainable power future.</p>
     <h1>2.RFID Attendance using IoT</h1>
     <p>The RFID Attendance System employs RFID tags/cards, RFID readers, and NodeMCU connected to the cloud. Participants use RFID cards, 
-        and NodeMCU captures and transmits data to a cloud database. Real-time attendance records are accessible via a user-friendly web interface, offering scalability, cost-effectiveness, and secure data transmission. 
+        and NodeMCU captures and transmits data to a cloud database. Real-time attendance records are accessible via a user-friendly web 
+        interface, offering scalability, cost-effectiveness, and secure data transmission. 
         The system streamlines attendance tracking for educational and organizational settings, ensuring efficiency and accuracy.</p>
     <h1>3.UHF RFID Attendance Monitoring system</h1>
+    <p>The UHF RFID Attendance Monitoring System offers a contactless and efficient solution for attendance tracking. 
+        Using Ultra-High-Frequency RFID technology, the system automates data collection, ensuring accuracy and reducing administrative overhead. 
+        Key features include real-time processing, scalability, customizable reporting, and integration capabilities.
+         The system enhances security and addresses the limitations of traditional attendance methods, providing a streamlined and 
+         future-proof solution for diverse environments.</p>
 </body>
 </html>
