--- a/contact.html
+++ b/contact.html
@@ -13,11 +13,12 @@
         <li> <a href="project.html">Project</a></li>
         <li style="text-align: right;"><a href="https://www.linkedin.com/in/kkannan-s-1631491b5/", target="_blank", title="Linkedin">LinkedIn</a></li>
     </ul></h1>
+   <h2>
+    Phone:
+    <button type="button" onclick="alert('Add +91')">9952968106</button>
+   <br> Mail:<a href="mailto:sabarikkannan@gmail.com" , style="color:black;">Touch me!</a>
+   <br>Instagram:<a href="www.instagram.com" >cricket_mad__boy</a>
+   </h2>
    
-    <p>Phone:
-        <button type="button" onclick="alert('Add +91')">9952968106</button>
-       <br> Mail:<a href="mailto:sabarikkannan@gmail.com" , style="color:black;">Touch me!</a>
-       <br>Instagram:<a href="www.instagram.com" >cricket_mad__boy</a>
-    </p>
 </body>
 </html>
