--- a/contact.html
+++ b/contact.html
@@ -18,6 +18,7 @@
     <button type="button" onclick="alert('Add +91')">9952968106</button>
    <br> Mail:<a href="mailto:sabarikkannan@gmail.com" , style="color:black;">Touch me!</a>
    <br>Instagram:<a href="www.instagram.com" >cricket_mad__boy</a>
+   <br>LinkedIn:<a href="https://www.linkedin.com/in/kkannan-s-1631491b5/"><button>Touch Here!</button></a>
    </h2>
    
 </body>
