--- a/Personal.html
+++ b/Personal.html
@@ -21,11 +21,11 @@
         <li style="text-align: right;"><a href="https://www.linkedin.com/in/kkannan-s-1631491b5/", target="_blank", title="Linkedin">LinkedIn</a></li>
     </ul></h1>
    
-<p title="My name", class="name">
-    My self <mark>  Mr</mark> S.KKANNAN 
+<h2>title="My name", class="name">
+    S.KKANNAN 
     <br>
     No.1,4th Cross street,Kannan nagar,<br>Madipakkam<br>Chennai-600091
-</p>
+</h2>
 <h2>
     
     Education
