--- a/Personal.html
+++ b/Personal.html
@@ -21,7 +21,7 @@
         <li style="text-align: right;"><a href="https://www.linkedin.com/in/kkannan-s-1631491b5/", target="_blank", title="Linkedin">LinkedIn</a></li>
     </ul></h1>
    
-<h2>title="My name", class="name">
+<h2 title="My name", class="name">
     S.KKANNAN 
     <br>
     No.1,4th Cross street,Kannan nagar,<br>Madipakkam<br>Chennai-600091
@@ -63,7 +63,14 @@
     </p>
     
 </h2>
-
+<h2>
+    Resume
+    <br>
+    <button onclick="open">
+        <a href="Resume.pdf"></a>
+        Click to Open
+    </button>
+</h2>
 </body>
 </html>
 
