--- a/Personal.html
+++ b/Personal.html
@@ -66,7 +66,7 @@
 <h2>
     Resume
     <br>
-    <button onclick="open">
+    <button>
         <a href="Resume.pdf"></a>
         Click to Open
     </button>
