--- a/Personal.html
+++ b/Personal.html
@@ -24,7 +24,7 @@
 <h2 title="My name", class="name">
     S.KKANNAN 
     <br>
-    No.1,4th Cross street,Kannan nagar,<br>Madipakkam<br>Chennai-600091
+    <h3>No.1,4th Cross street,Kannan nagar,<br>Madipakkam<br>Chennai-600091</h3>
 </h2>
 <h2>
     
