--- a/Personal.html
+++ b/Personal.html
@@ -67,7 +67,7 @@
     Resume
     <br>
     <br>
-    <a href="Resume.pdf"></a>
+    <iframe src="Resume.pdf" frameborder="0"></iframe>
     <button>
         Click to Open
     </button>
