--- a/Personal.html
+++ b/Personal.html
@@ -67,7 +67,7 @@
     Resume
     <br>
     <br>
-    <iframe src="Resume.pdf" frameborder="0"></iframe>
+    <iframe src="Resume.pdf" frameborder="0" width="50px" height="55px"></iframe>
     <button>
         Click to Open
     </button>
