--- a/Personal.html
+++ b/Personal.html
@@ -3,6 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script src="main.js"></script>
     <title>About Me</title>
     <style>
         abbr{
@@ -67,10 +68,9 @@
     Resume
     <br>
     <br>
-    <iframe src="Resume.pdf" frameborder="0" width="50px" height="55px"></iframe>
-    <button>
-        Click to Open
-    </button>
+    
+    <iframe id="forPostyouradd" src="Resume.pdf" width="500" height="500" style="background:#ffffff"></iframe>
+    
 </h2>
 </body>
 </html>
