--- a/project.html
+++ b/project.html
@@ -6,9 +6,10 @@
     <link rel="stylesheet" href="style.css">
     <style>
         p{
+            font-size:medium
             text-align: justify;
             text-decoration:none;
-            color: darkblue;
+            color: black;
         }
     </style>
 </head>
@@ -17,11 +18,11 @@
         <li> <a href="index.html">Home</a></li>
         <li> <a href="Personal.html">Personal</a></li>
         <li> <a href="contact.html">Contact</a></li>
-        <li> <a href="project.html">Project</a></li>
+        <li> <a href="project.html" class="Project">Project</a></li>
         <li style="text-align: right;"><a href="https://www.linkedin.com/in/kkannan-s-1631491b5/", target="_blank", title="Linkedin">LinkedIn</a></li>
     </ul></h1>
    
-    <h1>1.Wireless charging using Electromagnetic induction</h1>
+    <h1><b>1.Wireless charging using Electromagnetic induction</b></h1>
     <p>This project explores a wireless charging system based on electromagnetic induction for efficient power transfer.
         Comprising a transmitter and receiver unit, the system utilizes coils to establish mutual electromagnetic coupling. 
         The transmitter generates an alternating current, creating a magnetic field, while the receiver captures and converts 
