--- a/Personal.html
+++ b/Personal.html
@@ -14,9 +14,9 @@
     
 </head>
 <body style="background-color: white;">
-    <h1><ul class="home">
+    <h1><ul>
         <li> <a href="index.html">Home</a></li>
-        <li> <a href="Personal.html">Personal</a></li>
+        <li> <a href="Personal.html" class="Personal">Personal</a></li>
         <li> <a href="contact.html">Contact</a></li>
         <li> <a href="project.html">Project</a></li>
         <li style="text-align: right;"><a href="https://www.linkedin.com/in/kkannan-s-1631491b5/", target="_blank", title="Linkedin">LinkedIn</a></li>
@@ -31,7 +31,7 @@
     
     Education
     <p>
-        <table class="tab">
+        <table class="tab" border="3 solid black">
             <tr class="head">
                 <th>Degree</th>
                 <th>University</th>
@@ -40,7 +40,7 @@
                 <th><abbr title="YOP">Year of passing</abbr></th>
             </tr>
             <tr>
-                <th><abbr title="B.E">Bachelor of Engineering</abbr> </th>
+                <th><abbr title="B.E">B.E</abbr> </th>
                 <th><abbr title="JCE">Jerusalem college of Engineering</abbr></th>
                 <th>8.4/10</th>
                 <th>84%</th>
@@ -48,14 +48,14 @@
             </tr>
             <tr>
                 <th>HSC</th>
-                <th>Brilliant Matriculation Higher secondary school</th>
+                <th>Brilliant Matriculation Higher secondary school &nbsp;</th>
                 <th>459/600</th>
                 <th>76.5%</th>
                 <th>2020</th>
             </tr>
             <tr>
                 <th>SSLC</th>
-                <th>Brilliant Matriculation Higher secondary school</th>
+                <th>Brilliant Matriculation Higher secondary school &nbsp;</th>
                 <th>434/500</th>
                 <th>86%</th>
                 <th>2018</th>
