--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <style>
          p{
             font-size: 50px;  
-        }    
+        }  
     </style>
 </head>
 <body style="background-color: white;">
     <h1><ul id="home">
-        <li> <a href="index.html">Home</a></li>
+        <li> <a href="index.html" class="Home">Home</a></li>
         <li> <a href="Personal.html">Personal</a></li>
         <li> <a href="contact.html">Contact</a></li>
         <li> <a href="project.html">Project</a></li>
