--- a/project.html
+++ b/project.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <style>
         p{
-            font-size:medium
+            font-size:medium;
             text-align: justify;
             text-decoration:none;
             color: black;
