--- a/project.html
+++ b/project.html
@@ -14,13 +14,13 @@
     </style>
 </head>
 <body>
-    <h1><ul>
+    <header><ul>
         <li> <a href="index.html">Home</a></li>
         <li> <a href="Personal.html">Personal</a></li>
         <li> <a href="contact.html">Contact</a></li>
         <li> <a href="project.html" class="Project">Project</a></li>
         <li style="text-align: right;"><a href="https://www.linkedin.com/in/kkannan-s-1631491b5/", target="_blank", title="Linkedin">LinkedIn</a></li>
-    </ul></h1>
+    </ul></header>
    
     <h1><b>1.Wireless charging using Electromagnetic induction</b></h1>
     <p>This project explores a wireless charging system based on electromagnetic induction for efficient power transfer.
