--- a/Personal.html
+++ b/Personal.html
@@ -14,13 +14,13 @@
     
 </head>
 <body style="background-color: white;">
-    <h1><ul>
+    <header><ul>
         <li> <a href="index.html">Home</a></li>
         <li> <a href="Personal.html" class="Personal">Personal</a></li>
         <li> <a href="contact.html">Contact</a></li>
         <li> <a href="project.html">Project</a></li>
         <li style="text-align: right;"><a href="https://www.linkedin.com/in/kkannan-s-1631491b5/", target="_blank", title="Linkedin">LinkedIn</a></li>
-    </ul></h1>
+    </ul></header>
    
 <h2 title="My name", class="name">
     S.KKANNAN 
