--- a/index.html
+++ b/index.html
@@ -14,21 +14,33 @@
     </style>
 </head>
 <body style="background-color: white;">
-    <header><ul id="home">
-        <li> <a href="index.html" class="Home">Home</a></li>
-        <li> <a href="Personal.html">Personal</a></li>
-        <li> <a href="contact.html">Contact</a></li>
-        <li> <a href="project.html">Project</a></li>
-        <li style="text-align: right;"><a href="https://www.linkedin.com/in/kkannan-s-1631491b5/", target="_blank", title="Linkedin">LinkedIn</a></li>
-    </ul></header>
+    <div class="top-bar">
+        <header><ul id="home">
+            <li> <a href="index.html" class="Home">Home</a></li>
+            <li> <a href="Personal.html">Personal</a></li>
+            <li> <a href="contact.html">Contact</a></li>
+            <li> <a href="project.html">Project</a></li>
+            <li style="text-align: right;"><a href="https://www.linkedin.com/in/kkannan-s-1631491b5/", target="_blank", title="Linkedin">LinkedIn</a></li>
+        </ul></header>
+       
+    </div>
    
   
 
-    <p>Welcome to my page &#9995</p>
-    <img src="welcome.jpg" alt="Welcome">
+    <div class="main-text">
+        <p>Welcome to my page &#9995</p>
+    </div>
+
+    <div class="image">
+        <img src="welcome.jpg" alt="Welcome">
+    </div>
+    
 <br><br><br><br><br><br><br><br>
 <hr>
-<h6>This page is managed by S.KKANNAN</h6> 
+<div class="Border-ack">
+    <h6>This page is managed by S.KKANNAN</h6> 
+</div>
+
 
 </body>
 </html>
