--- a/contact.html
+++ b/contact.html
@@ -6,13 +6,16 @@
     <title>Contact</title>
 </head>
 <body>
-    <header><ul>
-        <li> <a href="index.html">Home</a></li>
-        <li> <a href="Personal.html">Personal</a></li>
-        <li> <a href="contact.html" class="Contact">Contact</a></li>
-        <li> <a href="project.html">Project</a></li>
-        <li style="text-align: right;"><a href="https://www.linkedin.com/in/kkannan-s-1631491b5/", target="_blank", title="Linkedin">LinkedIn</a></li>
-    </ul></header>
+    <header>
+        <nav>
+            <a class="home-active" href="index.html">Home</a>
+                 <a href="Personal.html" class="Personal">Personal</a>
+                 <a href="contact.html">Contact</a>
+                 <a href="project.html">Project</a>
+                 <a href="https://www.linkedin.com/in/kkannan-s-1631491b5/", target="_blank", title="Linkedin">LinkedIn</a>
+                 <span></span>
+        </nav>
+    </header>
    <h2>
     Phone:
     <button type="button" onclick="alert('Add +91')">9952968106</button>
