--- a/project.html
+++ b/project.html
@@ -14,15 +14,18 @@
     </style>
 </head>
 <body>
-    <header><ul>
-        <li> <a href="index.html">Home</a></li>
-        <li> <a href="Personal.html">Personal</a></li>
-        <li> <a href="contact.html">Contact</a></li>
-        <li> <a href="project.html" class="Project">Project</a></li>
-        <li style="text-align: right;"><a href="https://www.linkedin.com/in/kkannan-s-1631491b5/", target="_blank", title="Linkedin">LinkedIn</a></li>
-    </ul></header>
-   
-    <h1><b>1.Wireless charging using Electromagnetic induction</b></h1>
+    <header>
+        <nav>
+            <a class="home-active" href="index.html">Home</a>
+                 <a href="Personal.html" class="Personal">Personal</a>
+                 <a href="contact.html">Contact</a>
+                 <a href="project.html">Project</a>
+                 <a href="https://www.linkedin.com/in/kkannan-s-1631491b5/", target="_blank", title="Linkedin">LinkedIn</a>
+                 <span></span>
+        </nav>
+    </header>
+    <main class="project"> 
+        <h1><b>1.Wireless charging using Electromagnetic induction</b></h1>
     <p>This project explores a wireless charging system based on electromagnetic induction for efficient power transfer.
         Comprising a transmitter and receiver unit, the system utilizes coils to establish mutual electromagnetic coupling. 
         The transmitter generates an alternating current, creating a magnetic field, while the receiver captures and converts 
@@ -42,5 +45,7 @@
         Key features include real-time processing, scalability, customizable reporting, and integration capabilities.
          The system enhances security and addresses the limitations of traditional attendance methods, providing a streamlined and 
          future-proof solution for diverse environments.</p>
+    </main>
+    
 </body>
 </html>
